--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<h1> Jason is danker than me </h1>
+<h1> This site isn't done yet, I will work on this later :) </h1>
 <br>
-jason made me put that
+Jason is danker than me
 </html>
