Added website counter, rekt George

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 <h1> This site isn't done yet, I will work on this later :) </h1>
 <br>
-Jason is danker than me
+Jason Lin is supa hot fire, and I made George put this here
+<br>
+  <script language="JavaScript">var fhsh = document.createElement('script');var fhs_id_h = "3215850";
+fhsh.src = "//s1.freehostedscripts.net/ocount.php?site="+fhs_id_h+"&name=Page Visits&a=1";
+document.head.appendChild(fhsh);document.write("<span id='h_"+fhs_id_h+"'></span>");
+</script>
+
 </html>
