--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <br>
 Jason Lin is supa hot fire, and I made George put this here
 <br>
+<body>
   <script language="JavaScript">var fhsh = document.createElement('script');var fhs_id_h = "3215850";
 fhsh.src = "//s1.freehostedscripts.net/ocount.php?site="+fhs_id_h+"&name=Page Visits&a=1";
 document.head.appendChild(fhsh);document.write("<span id='h_"+fhs_id_h+"'></span>");
-</script>
-
+  </script>
+</body>
 </html>
