Add link to bee.html (bee movie script)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <h1> This site isn't done yet, I will work on this later :) </h1>
 <br>
-  Jason's original stuff is over <a href=http://georgewearsato.ga/jason.html>here</a>
+  Jason's original stuff is over <a href="jason.html">here</a>
+<br>
+  <a href="bee.html">Bee movie!</a>
 <br>
   <script language="JavaScript">var fhsh = document.createElement('script');var fhs_id_h = "3215850";
 fhsh.src = "//s1.freehostedscripts.net/ocount.php?site="+fhs_id_h+"&name=people have visited this site so far.&a=1";
