--- a/jason.html
+++ b/jason.html
@@ -1,3 +1,5 @@
 <html>
-Jason Lin is supa hot fire, and I made George put this here
-</html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+</head>
+  </html>
