--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <html>
 <h1> This site isn't done yet, I will work on this later :) </h1>
 <br>
-  Jason's original stuff is over <a href="jason.html">here</a>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
 <br>
-  <a href="bee.html">Bee movie!</a>
+  Rickroll counter for this page:
 <br>
-  <script language="JavaScript">var fhsh = document.createElement('script');var fhs_id_h = "3215850";
-fhsh.src = "//s1.freehostedscripts.net/ocount.php?site="+fhs_id_h+"&name=people have visited this site so far.&a=1";
-document.head.appendChild(fhsh);document.write("<span id='h_"+fhs_id_h+"'></span>");
-  </script>
+  <div align='center'><a href='http://www.free-website-hit-counter.com'><img src='http://www.free-website-hit-counter.com/c.php?d=9&id=98615&s=55' border='0' title='free website hit counter'></a><br / ><small><a href='http://www.free-website-hit-counter.com' title="free website hit counter">Free website hit counter</a></small></div>
 </html>
