--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<h1> Apparenttly .ga is a real website extension, and you just got rickrolled by George </h1>
+<h1> Apparently .ga is a real website extension, and you just got rickrolled by George </h1>
 <br>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1" frameborder="0" allowfullscreen></iframe>
 <br>
